<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_grey">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.BMSQueryApp.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/app_bar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/back_bt"
                android:background="@drawable/ripple_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/appbar_padding"
                android:contentDescription="@string/setting" />

            <TextView
                android:id="@+id/instance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/setting"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/white"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/component_margin_small"
        android:id="@+id/account_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="@dimen/hint_font_size"
            android:textColor="@color/dark_grey"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/component_margin_small">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/title_font_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/email_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:text="abc123@mail.com"
                android:layout_marginStart="@dimen/component_margin"
                android:id="@+id/email_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/email_label"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_layout"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/component_margin_small"
        android:layout_marginTop="@dimen/component_margin_small"
        android:id="@+id/notification_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="@dimen/hint_font_size"
            android:textColor="@color/dark_grey"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/in_app_notification"
            android:id="@+id/in_app_notif_cb"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:button="@null"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/email_notification"
            android:id="@+id/emial_notif_cb"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:button="@null"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/notification_layout"
        android:layout_marginTop="@dimen/component_margin_small"
        android:padding="@dimen/component_margin_small"
        android:orientation="vertical"
        android:background="@color/white"
        android:id="@+id/asset_info_display_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_info_display"
            android:textSize="@dimen/hint_font_size"
            android:textColor="@color/dark_grey"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/serial_no"
                android:id="@+id/serial_no_cb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/location_cb"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:button="@null"
                android:layout_marginEnd="@dimen/component_margin_small"
                />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/location"
                android:id="@+id/location_cb"
                app:layout_constraintStart_toEndOf="@id/serial_no_cb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:button="@null"
                />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/service_code"
                android:id="@+id/service_code_cb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/serial_no_cb"
                app:layout_constraintEnd_toStartOf="@id/asset_type_cb"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:button="@null"
                android:layout_marginEnd="@dimen/component_margin_small"
                />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/asset_type"
                android:id="@+id/asset_type_cb"
                app:layout_constraintTop_toBottomOf="@id/location_cb"
                app:layout_constraintStart_toEndOf="@id/service_code_cb"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:button="@null"
                />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/group"
                android:id="@+id/group_cb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/service_code_cb"
                app:layout_constraintEnd_toStartOf="@id/description_cb"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:button="@null"
                android:layout_marginEnd="@dimen/component_margin_small"
                />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:id="@+id/description_cb"
                app:layout_constraintTop_toBottomOf="@id/asset_type_cb"
                app:layout_constraintStart_toEndOf="@id/group_cb"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:button="@null"
                />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/model_no"
                android:id="@+id/model_no_cb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/group_cb"
                app:layout_constraintEnd_toStartOf="@id/manual_cb"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:button="@null"
                android:layout_marginEnd="@dimen/component_margin_small"
                />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/manual"
                android:id="@+id/manual_cb"
                app:layout_constraintTop_toBottomOf="@id/description_cb"
                app:layout_constraintStart_toEndOf="@id/model_no_cb"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:button="@null"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/asset_info_display_layout"
        android:id="@+id/logout_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/component_margin_small"
        android:backgroundTint="@color/white"
        android:textColor="@color/red"/>

</androidx.constraintlayout.widget.ConstraintLayout>